# Tarefa27-01

./: CMakeLists.txt  READ.ME  README.md  main.c  ws2812.c  ws2812.h  ws2812.pio
